--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 		<!--  -->
 		<div class="w-full flex-w flex-sb-m p-l-80 p-r-80 p-t-22 p-lr-15-sm">
 			<div class="wrappic1 m-r-30 m-t-10 m-b-10">
-				<a href="#"><img src="images/icons/logo.png" alt="LOGO"></a>
+				<a href="#">Gladiolus ceramics</a>
 			</div>
 
 			<div class="flex-w m-t-10 m-b-10">
-				<a href="#" class="size2 m1-txt1 flex-c-m how-btn1 trans-04">
+				<!--<a href="#" class="size2 m1-txt1 flex-c-m how-btn1 trans-04">
 					Sign Up
-				</a>
+				</a>-->
 			</div>
 		</div>
 
@@ -49,7 +49,7 @@
 
 			<div class="flex-w flex-c-m cd100">
 				<div class="flex-col-c wsize1 m-b-30">
-					<span class="l1-txt2 p-b-9 days">35</span>
+					<span class="l1-txt2 p-b-9 days">90</span>
 					<span class="s1-txt1 where1 p-l-35">Days</span>
 				</div>
 
@@ -70,7 +70,7 @@
 			</div>
 		</div>
 
-		<!--  -->
+		<!--  
 		<div class="flex-w flex-c-m p-b-35">
 			<a href="#" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
 				<i class="fa fa-facebook"></i>
@@ -83,7 +83,7 @@
 			<a href="#" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
 				<i class="fa fa-youtube-play"></i>
 			</a>
-		</div>
+		</div>-->
 	</div>
 
 
