--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 		<!--  -->
 		<div class="w-full flex-w flex-sb-m p-l-80 p-r-80 p-t-22 p-lr-15-sm">
 			<div class="wrappic1 m-r-30 m-t-10 m-b-10">
-				<a href="#">Gladiolus ceramics</a>
+				<h5 class="l1-txt1 p-b-40 respon1">
+					Gladiolus ceramics
+				</h5>
 			</div>
 
 			<div class="flex-w m-t-10 m-b-10">
