--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
 		<!--  -->
 		<div class="w-full flex-w flex-sb-m p-l-80 p-r-80 p-t-22 p-lr-15-sm">
 			<div class="wrappic1 m-r-30 m-t-10 m-b-10">
-				<h3 class="m1-txt1 p-b-40 respon1" style="color:white" >
-					Gladiolus Ceramics
-				</h3>
+				<image src="images/logo.jpg" width="100" height="100" alt="">
 			</div>
 
 			<div class="flex-w m-t-10 m-b-10">
